--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -34,11 +34,13 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Project
 excludes=
 file.reference.mysql-connector-java-8.0.29.jar=C:\\Users\\XPC\\Desktop\\ConnectorJava\\mysql-connector-java-8.0.29.jar
+file.reference.mysql-connector-java-8.0.29.jar-1=..\\..\\..\\Documentos\\ConnectorJ\\ConnectorJava\\mysql-connector-java-8.0.29.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.absolutelayout.classpath}:\
-    ${file.reference.mysql-connector-java-8.0.29.jar}
+    ${file.reference.mysql-connector-java-8.0.29.jar}:\
+    ${file.reference.mysql-connector-java-8.0.29.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
