--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,6 +33,7 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Project
 excludes=
+file.reference.AbsoluteLayout.jar=C:\\Program Files\\NetBeans-13\\netbeans\\java\\modules\\ext\\AbsoluteLayout.jar
 file.reference.mysql-connector-java-8.0.29.jar=C:\\Users\\XPC\\Desktop\\ConnectorJava\\mysql-connector-java-8.0.29.jar
 file.reference.mysql-connector-java-8.0.29.jar-1=..\\..\\..\\Documentos\\ConnectorJ\\ConnectorJava\\mysql-connector-java-8.0.29.jar
 includes=**
@@ -40,7 +41,8 @@ jar.compress=false
 javac.classpath=\
     ${libs.absolutelayout.classpath}:\
     ${file.reference.mysql-connector-java-8.0.29.jar}:\
-    ${file.reference.mysql-connector-java-8.0.29.jar-1}
+    ${file.reference.mysql-connector-java-8.0.29.jar-1}:\
+    ${file.reference.AbsoluteLayout.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
