--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -36,13 +36,15 @@ excludes=
 file.reference.AbsoluteLayout.jar=C:\\Program Files\\NetBeans-13\\netbeans\\java\\modules\\ext\\AbsoluteLayout.jar
 file.reference.mysql-connector-java-8.0.29.jar=C:\\Users\\XPC\\Desktop\\ConnectorJava\\mysql-connector-java-8.0.29.jar
 file.reference.mysql-connector-java-8.0.29.jar-1=..\\..\\..\\Documentos\\ConnectorJ\\ConnectorJava\\mysql-connector-java-8.0.29.jar
+file.reference.mysql-connector-java-8.0.29.jar-2=..\\..\\..\\Documentos\\ConnectorJ\\ConnectorJava\\mysql-connector-java-8.0.29.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.absolutelayout.classpath}:\
     ${file.reference.mysql-connector-java-8.0.29.jar}:\
     ${file.reference.mysql-connector-java-8.0.29.jar-1}:\
-    ${file.reference.AbsoluteLayout.jar}
+    ${file.reference.AbsoluteLayout.jar}:\
+    ${file.reference.mysql-connector-java-8.0.29.jar-2}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
