--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,12 +33,12 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Project
 excludes=
-file.reference.-Program_Files=C:\\Program Files
 file.reference.AbsoluteLayout.jar=C:\\Program Files\\NetBeans-13\\netbeans\\java\\modules\\ext\\AbsoluteLayout.jar
 file.reference.AbsoluteLayout.jar-1=C:\\Program Files\\NetBeans-12.3\\netbeans\\java\\modules\\ext\\AbsoluteLayout.jar
 file.reference.mysql-connector-java-8.0.29.jar=C:\\Users\\XPC\\Desktop\\ConnectorJava\\mysql-connector-java-8.0.29.jar
 file.reference.mysql-connector-java-8.0.29.jar-1=..\\..\\..\\Documentos\\ConnectorJ\\ConnectorJava\\mysql-connector-java-8.0.29.jar
 file.reference.mysql-connector-java-8.0.29.jar-2=..\\..\\..\\Documentos\\ConnectorJ\\ConnectorJava\\mysql-connector-java-8.0.29.jar
+file.reference.mysql-connector-java-8.0.29.jar-3=C:\\Users\\morri\\Downloads\\ConnectorJava\\ConnectorJava\\mysql-connector-java-8.0.29.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -47,8 +47,8 @@ javac.classpath=\
     ${file.reference.mysql-connector-java-8.0.29.jar-1}:\
     ${file.reference.AbsoluteLayout.jar}:\
     ${file.reference.mysql-connector-java-8.0.29.jar-2}:\
-    ${file.reference.-Program_Files}:\
-    ${file.reference.AbsoluteLayout.jar-1}
+    ${file.reference.AbsoluteLayout.jar-1}:\
+    ${file.reference.mysql-connector-java-8.0.29.jar-3}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -88,7 +88,7 @@ main.class=code.Home
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-platform.active=default_platform
+platform.active=JDK_18
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
