--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -104,7 +104,7 @@ main.class=code.Home
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-platform.active=JDK_18
+platform.active=JDK_18__Default_
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
